[FLINK-7304] [scripts] Simplify taskmanager GC configuration